--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Sharona</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
+    <div class="div">
+    <img src="images/cloud1.png" alt="cloud" style="height:10%; margin-left: 30%;">
+    <br>
     <h1>
-        Sharona is the beast
+        I am Sharona
     </h1>
-    <img src="sharona new.jpg">
+    <h3>
+        Sharona the beast
+    </h3>
+    <img src="images/cloud2.png" alt="cloud" style="height:20%; position: absolute; left: 15%; top:10%">
+    <img src="images/Kelpie.png" alt="Kelpie" style="height:75%; bottom: 0;">
+    </div>
+    <hr>
+    <img src="sharona new.jpg" width="30%">
+    <hr>
     <table>
         <tr>
             <td>
@@ -39,5 +52,7 @@
             </td>
         </tr>
     </table>
+    <hr>
+    <a href="members.html">Become a fan</a>
 </body>
 </html>
